--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@gsap/react": "^2.1.2",
     "framer-motion": "^12.23.24",
     "gsap": "^3.12.5",
+    "lenis": "^1.3.13",
     "motion": "^12.23.24",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "revoicons": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
