--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.12.5",
     "lenis": "^1.3.13",
+    "mathjs": "^15.0.0",
     "motion": "^12.23.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "revoicons": "^2.1.0"
+    "revoicons": "^2.1.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
