feat: Add email waitlist system with Supabase + Resend
- Implement Edge Function for email collection and thank you emails
- Add frontend form with validation and user feedback
- Set up Supabase database for email storage
- Integrate Resend API for email delivery
- Add production setup guide for domain verification
- Include deployment scripts and documentation
- Fix React key warnings in BrokerList component
- Improve environment variable handling

Ready for production after domain verification in Resend.

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,22 @@
 /build
 /dist
 
-# environment variables
+# environment variables (IMPORTANT: Keep these secret!)
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.json
+
+# Supabase
+supabase/.env
+supabase/.env.json
+supabase/functions/**/.env
+supabase/functions/**/.env.json
+.env.supabase
+.branches
+.temp
 
 # logs
 npm-debug.log*
