--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@supabase/supabase-js": "^2.78.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.12.5",
     "lenis": "^1.3.13",
@@ -18,8 +19,11 @@
     "motion": "^12.23.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.5",
     "revoicons": "^2.1.0",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "supabase": "^2.54.11",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
